# depfixer

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE
depfixer/src/main/java/com/wix/bazel/: CliParameters.java  Overrides.java  WixOverrides.java
depfixer/src/main/java/com/wix/bazel/analyze/: AbstractImportRegexAnalyzer.java  AbstractRegexAnalyzer.java  AbstractTargetAnalyzer.java  AllImportsAnalyzer.java  AnalyzerContext.java  AnalyzerResult.java  BUILD.bazel  CannotFindSymbolAnalyzer.java  CannotFindSymbolWithPackageAnalyzer.java  ClassNotFoundAnalyzer.java  ClassNotFoundExceptionAnalyzer.java  ClassfileNotFoundAnalyzer.java  CouldNotResolveAnalyzer.java  FqcnCouldNotResolveAnalyzer.java  GetAllFqcnImportsAnalyzer.java  ImportAnalysis.java  ImportNotFoundObjectAnalyzer.java  MissingSymbolAnalyzer.java  NeedsToBeAbstractAnalyzer.java  NotFoundMemberAnalyzer.java  NotFoundValueWithPackageAnalyzer.java  ObjectNotPackageMemberAnalyzer.java  PackageDoesNotExistAnalyzer.java  PackageDoesNotExistExtendedAnalyzer.java  RegexAnalysis.java  ScalaXmlAnalyzer.java  SymbolNotFoundAnalyzer.java  SymbolTypeMissingFromClasspathAnalyzer.java  TargetAnalyzer.java  ToolInfoAnalyzer.java  TremNotFoundAnalyzer.java  UberAnalyzer.java  UnableToLocatClassAnalyzer.java  ValueIsNotMemberOfObjectAnalyzer.java  WorkerLogAnalyzer.java
depfixer/src/main/java/com/wix/bazel/brokentarget/: AbstractBrokenTargetExtractor.java  BUILD.bazel  BrokenTargetBepExtractor.java  BrokenTargetData.java  BrokenTargetExtractor.java
depfixer/src/main/java/com/wix/bazel/configuration/: ClasspathSource.java  CliParameters.java  CliSource.java  Configuration.java  UserConfigSource.java
depfixer/src/main/java/com/wix/bazel/depfixer/: BUILD.bazel  DepFixer.java  Overrides.java
depfixer/src/main/java/com/wix/bazel/depfixer/analyze/: AbstractImportRegexAnalyzer.java  AbstractRegexAnalyzer.java  AbstractTargetAnalyzer.java  AllImportsAnalyzer.java  AnalyzerContext.java  AnalyzerResult.java  BUILD.bazel  CannotFindSymbolAnalyzer.java  CannotFindSymbolWithPackageAnalyzer.java  ClassNotFoundAnalyzer.java  ClassNotFoundExceptionAnalyzer.java  ClassfileNotFoundAnalyzer.java  CouldNotResolveAnalyzer.java  FqcnCouldNotResolveAnalyzer.java  GetAllFqcnImportsAnalyzer.java  ImportAnalysis.java  ImportNotFoundObjectAnalyzer.java  MissingSymbolAnalyzer.java  NeedsToBeAbstractAnalyzer.java  NotFoundMemberAnalyzer.java  NotFoundValueWithPackageAnalyzer.java  ObjectNotPackageMemberAnalyzer.java  PackageDoesNotExistAnalyzer.java  PackageDoesNotExistExtendedAnalyzer.java  RegexAnalysis.java  ScalaXmlAnalyzer.java  SymbolNotFoundAnalyzer.java  SymbolTypeMissingFromClasspathAnalyzer.java  TargetAnalyzer.java  ToolInfoAnalyzer.java  TremNotFoundAnalyzer.java  UberAnalyzer.java  UnableToLocatClassAnalyzer.java  WorkerLogAnalyzer.java
depfixer/src/main/java/com/wix/bazel/depfixer/brokentarget/: AbstractBrokenTargetExtractor.java  BUILD.bazel  BrokenTargetBepExtractor.java  BrokenTargetData.java  BrokenTargetExtractor.java  BrokenTargetExtractorFactory.java  TextBrokenTargetExtractor.java
depfixer/src/main/java/com/wix/bazel/depfixer/cache/: BUILD.bazel  ExternalCache.java  ExternalCacheFactory.java  RepoCache.java  Targets.java  TargetsHolder.java  TargetsStore.java  TargetsStoreExtension.java
depfixer/src/main/java/com/wix/bazel/depfixer/configuration/: BUILD.bazel  ClasspathSource.java  CliSource.java  Configuration.java  UserConfigSource.java
depfixer/src/main/java/com/wix/bazel/depfixer/impl/: BUILD.bazel  PrimeAppExtension.java
depfixer/src/main/java/com/wix/bazel/depfixer/overrides/: BUILD.bazel  NoOverrides.java  Overrides.java
depfixer/src/main/java/com/wix/bazel/depfixer/process/: BUILD.bazel  Collector.java  ExecuteResult.java  ProcessRunner.java  RunWithRetries.java  StreamGobbler.java
depfixer/src/main/java/com/wix/bazel/depfixer/repo/: AbstractBazelIndexer.java  BUILD.bazel  ExternalRepoIndexer.java  FullyQualifiedLabel.java  GlobalExternalCache.java  InternalRepoIndexer.java  JarFileProcessor.java  RepoCache.java  Targets.java  TargetsHolder.java  TargetsStore.java  TargetsStoreExtension.java
depfixer/src/main/java/com/wix/bazel/depfixer/runner/: BUILD.bazel  Main.java
depfixer/src/main/java/com/wix/bazel/impl/: BUILD.bazel  PrimeAppExtension.java
depfixer/src/main/java/com/wix/bazel/process/: BUILD.bazel  Collector.java  ExecuteResult.java  ProcessRunner.java  RunWithRetries.java  StreamGobbler.java
depfixer/src/main/java/com/wix/bazel/repo/: AbstractBazelIndexer.java  BUILD.bazel  ExternalRepoFileVisitor.java  ExternalRepoIndexer.java  FullyQualifiedLabel.java  GlobalExternalCache.java  InternalRepoFileVisitor.java  InternalRepoIndexer.java  JarFileProcessor.java  RepoCache.java  RepoCacheBuilder.java  Targets.java  TargetsHolder.java  TargetsStore.java  TargetsStoreExtension.java
depfixer/src/main/java/com/wix/bazel/runmode/: BUILD.bazel  RunMode.java
depfixer/src/main/java/com/wix/bazel/trace/: AnalysisTracer.java  BUILD.bazel  CSVTraceWriter.java  TraceItem.java
depfixer/src/test/java/com/wix/bazel/depfixer/configuration/: BUILD.bazel  ClasspathConfigurationSourceTest.java  CliSourceTest.java  ConfigurationTest.java
depfixer/src/test/resources/: BUILD.bazel  depfixer.properties
