package(default_visibility = ["//visibility:public"])

scala_library(
    name = "analyze",
    srcs = ["//depfixer/src/main/java/com/wix/bazel/analyze:sources"],
    deps = [
        "//depfixer/src/main/java/com/wix/bazel/brokentarget",
        "//depfixer/src/main/java/com/wix/bazel/repo",
        "//depfixer/src/main/java/com/wix/bazel/trace",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
    visibility = ["//depfixer/src/main/java/com/wix/bazel/analyze:__pkg__"],
)
