package(default_visibility = ["//visibility:public"])

scala_library(
    name = "brokentarget",
    srcs = ["//depfixer/src/main/java/com/wix/bazel/brokentarget:sources"],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
    visibility = ["//depfixer/src/main/java/com/wix/bazel/brokentarget:__pkg__"],
)
