package(default_visibility = ["//visibility:public"])

scala_library(
    name = "repo",
    srcs = ["//depfixer/src/main/java/com/wix/bazel/repo:sources"],
    deps = [
        "//depfixer/src/main/java/com/wix/bazel/process",
        "//depfixer/src/main/java/com/wix/bazel/brokentarget",
        "//depfixer/src/main/resources",
        "//depfixer/src/main/java/com/wix/bazel/runmode",
        "@com_wixpress_ci_labeldex_rest_client",
        "@com_wixpress_ci_labeldex_common",
        "@com_wixpress_wix_ci_rest_client",
        "@org_scala_lang_scala_library",
        "@org_eclipse_jgit_org_eclipse_jgit",
     ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
    visibility = ["//depfixer/src/main/java/com/wix/bazel/repo:__pkg__"],
)
