package(default_visibility = ["//visibility:public"])

scala_library(
    name = "repo",
    srcs = ["//depfixer/src/main/java/com/wix/bazel/repo:sources"],
    deps = [
        "//depfixer/src/main/java/com/wix/bazel/brokentarget",
        "//depfixer/src/main/java/com/wix/bazel/configuration",
        "//depfixer/src/main/java/com/wix/bazel/process",
        "//depfixer/src/main/resources",
        "@wix_ci//labeldex/labeldex-common",
        "@wix_ci//labeldex/labeldex-rest-client",
        "@wix_ci//rest-client:wix-ci-rest-client",
        "@org_eclipse_jgit_org_eclipse_jgit",
        "@org_scala_lang_scala_library",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
    visibility = ["//depfixer/src/main/java/com/wix/bazel/repo:__pkg__"],
)
