package(default_visibility = ["//visibility:public"])

scala_library(
    name = "trace",
    srcs = ["//depfixer/src/main/java/com/wix/bazel/trace:sources"],
    deps = [
        "//depfixer/src/main/java/com/wix/bazel/brokentarget",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
    visibility = ["//depfixer/src/main/java/com/wix/bazel/trace:__pkg__"],
)
