package(default_visibility = ["//visibility:public"])

scala_library(
    name = "impl",
    srcs = [":sources"],
    deps = [
        "//depfixer/src/main/java/com/wix/bazel/depfixer/cache",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/configuration",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/process",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/repo",
    ],
)

sources()