package(default_visibility = ["//visibility:public"])

java_library(
    name = "impl",
    srcs = glob(["*.java"]),
    deps = [
        "//depfixer/src/main/java/com/wix/bazel/depfixer/cache",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/configuration",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/process",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/repo",
    ],
)
