package(default_visibility = ["//visibility:public"])

java_library(
    name = "repo",
    srcs = [":sources"],
    deps = [
        "//depfixer/src/main/java/com/wix/bazel/depfixer/brokentarget",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/cache",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/configuration",
        "//depfixer/src/main/java/com/wix/bazel/depfixer/process",
        "@org_eclipse_jgit_org_eclipse_jgit",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
    visibility = ["__pkg__"],
)
